--- a/EasyKanji/Client/_Imports.razor
+++ b/EasyKanji/Client/_Imports.razor
@@ -6,5 +6,5 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using EasyKanji
-@using EasyKanji.Shared
+@using EasyKanji.Client
+@using EasyKanji.Client.Shared
