--- a/EasyKanji/Client/Pages/Index.razor
+++ b/EasyKanji/Client/Pages/Index.razor
@@ -1,9 +1,12 @@
 ﻿@page "/"
+@inject NavigationManager NavigationManager
 
-<PageTitle>Index</PageTitle>
+<PageTitle>Популярные кандзи - EasyKanji</PageTitle>
 
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
+@code
+{
+    protected override void OnInitialized()
+    {
+        NavigationManager.NavigateTo("/main/popular");
+    }
+}
