--- a/EasyKanji/Client/Shared/Header.razor.css
+++ b/EasyKanji/Client/Shared/Header.razor.css
@@ -1,68 +1,31 @@
-.navbar-toggler {
-    background-color: rgba(255, 255, 255, 0.1);
+header {
+    width: 100%;
+    height: 60px;
+    background-color: #6a9aff;
 }
 
-.top-row {
-    height: 3.5rem;
-    background-color: rgba(0,0,0,0.4);
+button {
+    height: 40px;
+    margin: 0 50px 0 50px;
+    display: flex;
+    justify-content: space-between;
+    padding: 0 10px 0 10px;
+
+    background-color: #5882d900;
+    border: none;
+    border-radius: 20px;
+
+    position: relative;
+    top: 10px;
+
+    transition: background-color ease-in-out .2s;
 }
 
-.navbar-brand {
-    font-size: 1.1rem;
+p {
+    margin: 0 10px 0 10px;
+    line-height: 40px;
 }
 
-.oi {
-    width: 2rem;
-    font-size: 1.1rem;
-    vertical-align: text-top;
-    top: -2px;
-}
-
-.nav-item {
-    font-size: 0.9rem;
-    padding-bottom: 0.5rem;
-}
-
-    .nav-item:first-of-type {
-        padding-top: 1rem;
-    }
-
-    .nav-item:last-of-type {
-        padding-bottom: 1rem;
-    }
-
-    .nav-item ::deep a {
-        color: #d7d7d7;
-        border-radius: 4px;
-        height: 3rem;
-        display: flex;
-        align-items: center;
-        line-height: 3rem;
-    }
-
-.nav-item ::deep a.active {
-    background-color: rgba(255,255,255,0.25);
-    color: white;
-}
-
-.nav-item ::deep a:hover {
-    background-color: rgba(255,255,255,0.1);
-    color: white;
-}
-
-@media (min-width: 641px) {
-    .navbar-toggler {
-        display: none;
-    }
-
-    .collapse {
-        /* Never collapse the sidebar for wide screens */
-        display: block;
-    }
-    
-    .nav-scrollable {
-        /* Allow sidebar to scroll for tall menus */
-        height: calc(100vh - 3.5rem);
-        overflow-y: auto;
-    }
+button:hover {
+    background-color: #5882d9ff;
 }
