CSS Styles button

--- a/EasyKanji/Client/Pages/Main.razor
+++ b/EasyKanji/Client/Pages/Main.razor
@@ -19,7 +19,7 @@
         break;
     case "search":
         <PageTitle>Поиск кандзи - EasyKanji</PageTitle>
-        <form>
+        <form id="search" method="post">
             <input type="text" name="s" placeholder="Введите запрос"  value="@SearchText" required>
             <input type="submit">
         </form>
