--- a/EasyKanji/Client/Shared/LearnSectionNav.razor
+++ b/EasyKanji/Client/Shared/LearnSectionNav.razor
@@ -1,5 +1,5 @@
 ﻿<nav>
-    <div class="nav_button"><NavLink class="nav_button" href="/learn/by-meaning">По значению</NavLink></div>
+    <div class="nav_button nav_active"><NavLink class="nav_button" href="/learn/by-meaning">По значению</NavLink></div>
     <div class="nav_button"><NavLink class="nav_button" href="/learn/by-writing">По написанию</NavLink></div>
     <div class="nav_button"><NavLink class="nav_button" href="/learn/by-reading">По чтению</NavLink></div>
 </nav>
