--- a/EasyKanji/Client/Shared/MainSectionNav.razor
+++ b/EasyKanji/Client/Shared/MainSectionNav.razor
@@ -1,5 +1,5 @@
 ﻿<nav>
-    <div class="nav_button"><NavLink href="/main/popular">Популярные кандзи</NavLink></div>
+    <div class="nav_button nav_active"><NavLink href="/main/popular">Популярные кандзи</NavLink></div>
     <div class="nav_button"><NavLink href="/main/saved">Сохранённые кандзи</NavLink></div>
     <div class="nav_button"><NavLink href="/main/search">Поиск кандзи</NavLink></div>
 </nav>
