--- a/EasyKanji/Client/Shared/MainSectionNav.razor.css
+++ b/EasyKanji/Client/Shared/MainSectionNav.razor.css
@@ -1,3 +1,36 @@
 ﻿.nav_button ::deep a {
+ 
+    padding: 8px;
+    font-size: 25px;
+ 
 
+    text-decoration: none;
+    color: black;
+
+    white-space: nowrap;
+
+}
+
+.nav_button {
+    width: 700px;
+    margin: 0 20px 0 20px;
+    text-align: center;
+    background-color: #ffffff;
+
+    transition: background-color ease-in-out .2s;
+}
+.nav_button:hover {
+    background-color: #c7c7c7;
+}
+
+.nav_active {
+    background-color: #6a9aff !important;
+    border-radius: 0 0 10px 10px;
+}
+
+nav {
+    display: flex;
+    justify-content: center;
+    flex-wrap: nowrap;
+    padding: 0px;
 }
