--- a/EasyKanji/Client/Shared/Header.razor
+++ b/EasyKanji/Client/Shared/Header.razor
@@ -1,6 +1,6 @@
 ﻿<header>
     <button title="Profile" @onclick="LogInOut">
-        <img style="width: 40px; height: 40px;" />
+        <img src="avatar_face_man.svg" width="40px" height="40px" />
         <p>@UserName</p>
     </button>
 </header>
