--- a/EasyKanji/Client/Pages/Learn.razor
+++ b/EasyKanji/Client/Pages/Learn.razor
@@ -5,7 +5,8 @@
 
 <LearnSectionNav />
 
-<a class="learn-switch" href="/main/popular">Выйти из режима изучения</a>
+<a class="learn-switch" href="/main/popular">Выйти из режима изучения  <img  src="cross.svg" height="28" width="28"/></a>
+
 
 @switch (SectionId)
 {
