Styles: Main and Learn

--- a/EasyKanji/Client/Pages/Learn.razor.css
+++ b/EasyKanji/Client/Pages/Learn.razor.css
@@ -1,8 +1,9 @@
 ﻿.learn-switch {
-    font-size: 40px;
+    font-size: 26px;
     text-decoration: none;
     color: black;
     position: absolute;
     right: 35px;
-    top: 0;
+    top: 9px;
+    white-space: nowrap;
 }
