--- a/EasyKanji/Client/Pages/Main.razor
+++ b/EasyKanji/Client/Pages/Main.razor
@@ -5,12 +5,15 @@
 
 <MainSectionNav />
 
-<a class="learn-switch" href="/learn/by-meaning">Начать изучение</a>
+<a class="learn-switch" href="/learn/by-meaning">
+       Начать изучение
+    <img src="graduate-cap.svg" width="45px" height="45px" />
+    </a>
 
 @switch (SectionId)
 {
     case "popular":
-        <PageTitle>Популярные кандзи - EasyKanji</PageTitle>
+        <PageTitle class="popular">Популярные кандзи - EasyKanji</PageTitle>
         <KanjiTable TableData="null" />
         break;
     case "saved":
@@ -20,8 +23,10 @@
     case "search":
         <PageTitle>Поиск кандзи - EasyKanji</PageTitle>
         <form id="search" method="post">
-            <input type="text" name="s" placeholder="Введите запрос"  value="@SearchText" required>
-            <input type="submit">
+            <input type="text" name="s" placeholder="Введите запрос" value="@SearchText" required>
+            <button type="submit">
+                <img src="lupa.svg" width="29px" height="29px" />
+                </button>
         </form>
         <KanjiTable TableData="null" />
         break;
