--- a/EasyKanji/Client/Shared/MainSectionNav.razor.css
+++ b/EasyKanji/Client/Shared/MainSectionNav.razor.css
@@ -16,7 +16,6 @@
     margin: 0 20px 0 20px;
     text-align: center;
     background-color: #ffffff;
-
     transition: background-color ease-in-out .2s;
 }
 .nav_button:hover {
@@ -26,6 +25,9 @@
 .nav_active {
     background-color: #6a9aff !important;
     border-radius: 0 0 10px 10px;
+    border: 2px solid black;
+    border-top: none;
+    margin-top: -2px !important;
 }
 
 nav {
