Made active navigation button change and corrected their style

--- a/EasyKanji/Client/Pages/Learn.razor
+++ b/EasyKanji/Client/Pages/Learn.razor
@@ -3,7 +3,7 @@
 @using EasyKanji.Shared;
 @using EasyKanji.Client.Shared;
 
-<LearnSectionNav />
+<LearnSectionNav SectionId="@SectionId" />
 
 <a class="learn-switch" href="/main/popular">
     Выйти из режима изучения  
