--- a/EasyKanji/Client/Shared/KanjiTableCard.razor
+++ b/EasyKanji/Client/Shared/KanjiTableCard.razor
@@ -2,7 +2,7 @@
 
 <button @onclick="SaveDeleteKanji">
     <h1>@DisplayedKanji.Writing</h1>
-    <p>@DisplayedKanji.Meanings</p>
+    <p>@DisplayedKanji.Meaning</p>
 </button>
 
 @code {
