--- a/EasyKanji/Client/Pages/Main.razor
+++ b/EasyKanji/Client/Pages/Main.razor
@@ -6,7 +6,7 @@
 <MainSectionNav SectionId="@SectionId" />
 
 <a class="learn-switch" href="/learn/by-meaning">
-       Начать изучение
+    <p>Начать изучение</p>
     <img src="graduate-cap.svg" width="45" height="45" />
     </a>
 
