--- a/EasyKanji/Client/Pages/Learn.razor
+++ b/EasyKanji/Client/Pages/Learn.razor
@@ -14,15 +14,15 @@
 {
     case "by-meaning":
         <PageTitle>Изучение кандзи - EasyKanji</PageTitle>
-        <LearnUI Mode="0" KanjiList="null" />
+        <LearnUI Mode="0" />
         break;
     case "by-writing":
         <PageTitle>Изучение кандзи - EasyKanji</PageTitle>
-        <LearnUI Mode="1" KanjiList="null" />
+        <LearnUI Mode="1" />
         break;
     case "by-reading":
         <PageTitle>Изучение кандзи - EasyKanji</PageTitle>
-        <LearnUI Mode="2" KanjiList="null" />
+        <LearnUI Mode="2" />
         break;
 }
 
