--- a/EasyKanji/Client/Pages/Main.razor
+++ b/EasyKanji/Client/Pages/Main.razor
@@ -124,4 +124,14 @@
             { "ひと.らしい", "достойный [звания человека]" },
             }
     );
+
+    public Main()
+    {
+        TestKanji1.Id = 0;
+        TestKanji2.Id = 1;
+        TestKanji3.Id = 2;
+        TestKanji4.Id = 3;
+        TestKanji5.Id = 4;
+        TestKanji6.Id = 5;
+    }
 }
