--- a/EasyKanji/Client/Shared/LearnSectionNav.razor
+++ b/EasyKanji/Client/Shared/LearnSectionNav.razor
@@ -1,7 +1,7 @@
 ﻿<nav>
-    <div class="nav_button @(SectionId == "by-meaning" ? "nav_active": "")"><NavLink class="nav_button" href="/learn/by-meaning"><p>По значению</p></NavLink></div>
-    <div class="nav_button @(SectionId == "by-writing" ? "nav_active": "")"><NavLink class="nav_button" href="/learn/by-writing"><p>По написанию</p></NavLink></div>
-    <div class="nav_button @(SectionId == "by-reading" ? "nav_active": "")"><NavLink class="nav_button" href="/learn/by-reading"><p>По чтению</p></NavLink></div>
+    <div class="nav-button @(SectionId == "by-meaning" ? "nav-active": "")"><NavLink href="/learn/by-meaning"><p>По значению</p></NavLink></div>
+    <div class="nav-button @(SectionId == "by-writing" ? "nav-active": "")"><NavLink href="/learn/by-writing"><p>По написанию</p></NavLink></div>
+    <div class="nav-button @(SectionId == "by-reading" ? "nav-active": "")"><NavLink href="/learn/by-reading"><p>По чтению</p></NavLink></div>
 </nav>
 
 @code
