--- a/EasyKanji/Client/Shared/LearnSectionNav.razor.css
+++ b/EasyKanji/Client/Shared/LearnSectionNav.razor.css
@@ -1,18 +1,4 @@
-﻿.nav_button ::deep a {
-    padding: 8px;
-    font-size: 25px;
-    width: 100%;
-    height: 40px;
-    text-decoration: none;
-    color: black;
-}
-
-.nav_button ::deep a p {
-    margin: -35px 0;
-    white-space: nowrap;
-}
-
-.nav_button {
+﻿.nav-button {
     width: 700px;
     margin: 0 20px 0 20px;
     text-align: center;
@@ -21,11 +7,25 @@
     border-radius: 0 0 10px 10px;
 }
 
-.nav_button:hover {
-    background-color: #c7c7c7;
-}
+    .nav-button ::deep a {
+        padding: 8px;
+        font-size: 25px;
+        width: 100%;
+        height: 40px;
+        text-decoration: none;
+        color: black;
+    }
 
-.nav_active {
+    .nav-button ::deep a p {
+        margin: -35px 0;
+        white-space: nowrap;
+    }
+
+    .nav-button:hover {
+        background-color: #c7c7c7;
+    }
+
+.nav-active {
     background-color: #6a9aff !important;
     border: 2px solid black;
     border-top: none;
