--- a/EasyKanji/Client/Shared/LearnUI.razor.css
+++ b/EasyKanji/Client/Shared/LearnUI.razor.css
@@ -1,68 +1,29 @@
-.navbar-toggler {
-    background-color: rgba(255, 255, 255, 0.1);
+section {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    padding: 20px;
 }
 
-.top-row {
-    height: 3.5rem;
-    background-color: rgba(0,0,0,0.4);
+.kanji-card {
+    border-radius: 15px;
+    width: 200px;
+    height: 300px;
+    transition: .1s ease-in-out;
 }
 
-.navbar-brand {
-    font-size: 1.1rem;
+.main-card {
+    zoom: 1.2;
 }
 
-.oi {
-    width: 2rem;
-    font-size: 1.1rem;
-    vertical-align: text-top;
-    top: -2px;
+.hiden-card {
+    display: none;
+    margin: 0;
+    padding: 0;
+    width: 0;
+    height: 0;
 }
 
-.nav-item {
-    font-size: 0.9rem;
-    padding-bottom: 0.5rem;
-}
-
-    .nav-item:first-of-type {
-        padding-top: 1rem;
-    }
-
-    .nav-item:last-of-type {
-        padding-bottom: 1rem;
-    }
-
-    .nav-item ::deep a {
-        color: #d7d7d7;
-        border-radius: 4px;
-        height: 3rem;
-        display: flex;
-        align-items: center;
-        line-height: 3rem;
-    }
-
-.nav-item ::deep a.active {
-    background-color: rgba(255,255,255,0.25);
-    color: white;
-}
-
-.nav-item ::deep a:hover {
-    background-color: rgba(255,255,255,0.1);
-    color: white;
-}
-
-@media (min-width: 641px) {
-    .navbar-toggler {
-        display: none;
-    }
-
-    .collapse {
-        /* Never collapse the sidebar for wide screens */
-        display: block;
-    }
-    
-    .nav-scrollable {
-        /* Allow sidebar to scroll for tall menus */
-        height: calc(100vh - 3.5rem);
-        overflow-y: auto;
-    }
+.front-face-card {
+    background-color: #6a9aff !important;
 }
