--- a/EasyKanji/Client/Shared/MainSectionNav.razor
+++ b/EasyKanji/Client/Shared/MainSectionNav.razor
@@ -1,7 +1,7 @@
 ﻿<nav>
-    <div class="nav_button @(SectionId == "popular" ? "nav_active": "")"><NavLink href="/main/popular"><p>Популярные кандзи</p></NavLink></div>
-    <div class="nav_button @(SectionId == "saved" ? "nav_active": "")"><NavLink href="/main/saved"><p>Сохранённые кандзи</p></NavLink></div>
-    <div class="nav_button @(SectionId == "search" ? "nav_active": "")"><NavLink href="/main/search"><p>Поиск кандзи</p></NavLink></div>
+    <div class="nav-button @(SectionId == "popular" ? "nav-active": "")"><NavLink href="/main/popular"><p>Популярные кандзи</p></NavLink></div>
+    <div class="nav-button @(SectionId == "saved" ? "nav-active": "")"><NavLink href="/main/saved"><p>Сохранённые кандзи</p></NavLink></div>
+    <div class="nav-button @(SectionId == "search" ? "nav-active": "")"><NavLink href="/main/search"><p>Поиск кандзи</p></NavLink></div>
 </nav>
 
 @code
